Fix alignment in deadlines table

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -112,6 +112,8 @@ main {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
+    height: calc(100vh - 54px);
+    overflow-y: scroll;
     width: 100%;
 }
 
@@ -217,8 +219,8 @@ main {
     width: 100px;
 }
 
-.main-layout .deadlines-table table tr td:nth-of-type(2),
-.main-layout .deadlines-table table tr th:nth-of-type(2) {
+.main-layout .deadlines-table tr td:last-of-type,
+.main-layout .deadlines-table tr th:last-of-type {
     text-align: right;
     width: 200px;
 }
